# finance-query

./: .dockerignore  .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  .python-version  404.html  502_ERROR_DIAGNOSIS.md  502错误解决方案.md  API_FIXES.md  BUILD_FIX.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSS_FIX.md  Caddyfile  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.aws  Makefile  PORT_CONFIGURATION.md  PROJECT_SUMMARY.md  QUICK_FIX.md  QUICK_START.md  README.md  REVERSE_PROXY_GUIDE.md  SECURITY.md  TROUBLESHOOTING.md  asyncapi.yaml  book.toml  caddy-entrypoint.sh  constants.py  coverage.xml  deny.toml  diagnose.sh  dist-workspace.toml  docker-compose.override.yml  docker-compose.prod.yml  (+16 more)
.config/: nextest.toml
.github/: dependabot.yml  labeler.yml  pull_request_template.md
benches/: backtesting.rs  dataframe.rs  feeds.rs  finance.rs  indicators.rs  providers.rs  regression.rs  risk.rs  sentiment.rs  serde.rs  stream.rs  ticker.rs  tickers.rs  translation.rs
deployment/: index.html
docs/: asyncapi.yaml  deployment.md  getting-started.md  index.md  logging.md  migration-from-yfinance.md  openapi.yml  proxy-rotation.md  rate-limiting.md  requirements.txt  websockets.md
examples/: translation_bench.rs
finance-query-cli/: CHANGELOG.md  Cargo.toml  README.md
finance-query-cli/src/: config.rs  error.rs  lang.rs  main.rs  output.rs  parse.rs
finance-query-cli/src/alerts/: mod.rs  notification.rs  storage.rs  tui.rs
finance-query-cli/src/backtest/: dynamic_strategy.rs  indicators.rs  input.rs  mod.rs  presets.rs  render.rs  results.rs  state.rs  types.rs  user_presets.rs
finance-query-cli/src/backtest/render/: conditions.rs  confirm.rs  mod.rs  setup.rs  strategy.rs
finance-query-cli/src/commands/: alerts.rs  backtest.rs  calendar.rs  chart.rs  currencies.rs  dashboard.rs  dividends.rs  earnings.rs  edgar.rs  exchanges.rs  facts.rs  filings.rs  financials.rs  grades.rs  holders.rs  hours.rs  indicator.rs  indices.rs  info.rs  lookup.rs  market.rs  mod.rs  news.rs  options.rs  profile.rs  quote.rs  recommendations.rs  screener.rs  sector.rs  splits.rs  stream.rs  transcript.rs  trending.rs
finance-query-cli/src/dashboard/: actions.rs  input.rs  mod.rs  render.rs  runtime.rs  state.rs  storage.rs
finance-query-cli/src/edgar/: mod.rs  render.rs  state.rs
finance-query-cli/src/indicator/: input.rs  mod.rs  render.rs  state.rs
finance-query-cli/src/options/: input.rs  mod.rs  render.rs  state.rs
finance-query-cli/src/portfolio/: mod.rs  storage.rs
finance-query-derive/: Cargo.toml  README.md
finance-query-derive/src/: lib.rs  py_model.rs
finance-query-derive/tests/: py_model_basic.rs
finance-query-derive/tests/ui/: py_model_collections.rs  py_model_full.rs  py_model_simple.rs
finance-query-mcp/: .env.template  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
finance-query-mcp/src/: error.rs  lang.rs  main.rs  metrics.rs
finance-query-mcp/src/tools/: analysis.rs  calendar.rs  chart.rs  crypto.rs  dividends.rs  edgar.rs  feeds.rs  financials.rs  fred.rs  gql.rs  helpers.rs  indicators.rs  market.rs  mod.rs  news.rs  options.rs  quotes.rs  risk.rs  search.rs  transcripts.rs
finance-query-python/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
finance-query-python/docs/examples/: quickstart.ipynb
finance-query-python/finance_query/: __init__.py  _finance_query.pyi
finance-query-python/src/: backtest.rs  edgar.rs  enums.rs  error.rs  finance.rs  indicators.rs  lib.rs  logging_bridge.rs  models.rs  runtime.rs  strategy.rs  ticker.rs  tickers.rs
finance-query-python/tests/: conftest.py  test_dataframe.py  test_enums.py  test_errors.py  test_finance.py  test_jupyter.py  test_ticker.py  test_tickers.py
finance-query-python/tests/parity/: conftest.py  test_quote_parity.py
finance-query-python/tests/smoke/: test_smoke.py
frontend/: .dockerignore  Dockerfile  INTERNATIONALIZATION.md  generate-lock.sh  nginx.conf  package-lock.json  package.json  vite.config.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_atr.rs  fuzz_chart.rs  fuzz_discovery.rs  fuzz_edgar.rs  fuzz_financials.rs  fuzz_indicators_ohlcv.rs  fuzz_indicators_series.rs  fuzz_options.rs  fuzz_patterns.rs  fuzz_quote.rs
getting-started/: index.html
server/: .env.template  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  asyncapi.yaml  generate-mcp-html.py  openapi.yaml
server/api-reference/: index.html
server/asyncapi-html/: index.html
server/graphql-api-reference/: index.html
server/mcp-html/: index.html
server/mcp-reference/: index.html
server/openapi-html/: index.html
server/src/: cache.rs  lang.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs
server/src/graphql/: error.rs  fields.rs  mod.rs  pagination.rs  query.rs  subscription.rs
server/src/graphql/query/: mod.rs  root_batch.rs  root_discovery.rs  root_market.rs  root_metadata.rs  ticker_analysis.rs  ticker_core.rs  ticker_events.rs  ticker_holders.rs
server/src/graphql/types/: analysis.rs  batch.rs  calendar.rs  chart.rs  crypto.rs  edgar.rs  enums.rs  events.rs  feeds.rs  financials.rs  formatted.rs  fred.rs  holders.rs  indicators.rs  industry.rs  market.rs  metadata.rs  mod.rs  news.rs  options.rs  quote.rs  recommendation.rs  risk.rs  screener.rs  search.rs  sector.rs  streaming.rs  transcript.rs
server/src/handlers/: analysis.rs  calendar.rs  chart.rs  crypto.rs  edgar.rs  events.rs  feeds.rs  feeds_stream.rs  financials.rs  fred.rs  gql_bridge.rs  holders.rs  indicators.rs  market.rs  metadata.rs  mod.rs  news.rs  options.rs  quote.rs  risk.rs  screener.rs  search.rs  sector.rs  stream.rs  support.rs  system.rs  transcripts.rs
server/src/services/: analysis.rs  calendar.rs  chart.rs  crypto.rs  edgar.rs  events.rs  feeds.rs  financials.rs  fred.rs  holders.rs  indicators.rs  market.rs  metadata.rs  mod.rs  news.rs  options.rs  quote.rs  risk.rs  screener.rs  search.rs  transcripts.rs
server/websocket-api-reference/: index.html
src/: auth.rs  (+23 more)
tools/record-parity-fixtures/: Cargo.toml
tools/record-parity-fixtures/src/: main.rs
(+1061 files in other folders)
