[workspace]
members = ["server", "finance-query-derive", "finance-query-cli"]
resolver = "2"

[package]
name = "finance-query"
version = "2.3.0"
edition = "2024"
authors = ["Harvey Tseng <harveytseng2@gmail.com>"]
description = "A Rust library for querying financial data"
license = "MIT"
repository = "https://github.com/Verdenroz/finance-query"
homepage = "https://github.com/Verdenroz/finance-query"
documentation = "https://docs.rs/finance-query"
readme = "README.md"
keywords = ["finance", "yahoo", "stocks", "quotes", "market-data"]
categories = ["api-bindings", "finance"]
exclude = [
    "server/",
    ".github/",
    "v1/",
    "docs/",
    "*.md",
    "!README.md",
    ".env*",
    "Makefile",
    "docker-compose*.yml",
    "nginx/",
    "mkdocs.yml",
]

[lib]
name = "finance_query"
path = "src/lib.rs"

[dependencies]
# HTTP client (core dependency)
reqwest = { version = "0.13", features = ["json", "cookies", "gzip", "brotli", "blocking", "query"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

# Error handling
thiserror = "2.0.17"
anyhow = "1"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2"

# Regex for parsing
regex = "1"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Thread-safe primitives
once_cell = "1"

# Compile-time string concatenation
const_format = "0.2"

# Logging and tracing
tracing = "0.1"

# HTML parsing for web scraping
scraper = "0.25.0"

# WebSocket streaming support
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-stream = { version = "0.1", features = ["sync"] }
prost = "0.14.1"
base64 = "0.22"

# Optional: DataFrame support
polars = { version = "0.53", optional = true, default-features = false, features = ["lazy"] }
finance-query-derive = { version = "2.3.0", path = "finance-query-derive", optional = true }

# Optional: CSV parsing for macro-economic data (Treasury yields)
csv = { version = "1", optional = true }

# Optional: RSS/Atom feed parsing
feed-rs = { version = "2", optional = true }

[features]
default = []
# Enable DataFrame conversions with polars
dataframe = ["dep:polars", "dep:finance-query-derive"]
# Enable technical analysis indicators
indicators = []
# Enable backtesting engine for strategy simulation (requires indicators)
backtesting = ["indicators"]
# Enable FRED API and US Treasury yield curve
fred = ["dep:csv"]
# Enable CoinGecko cryptocurrency data
crypto = []
# Enable RSS/Atom news feed aggregation
rss = ["dep:feed-rs"]
# Enable standalone risk analytics: VaR, Sharpe/Sortino/Calmar ratios, beta, drawdown
risk = ["indicators"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1"
serial_test = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
