[workspace]
members = ["server", "finance-query-derive", "finance-query-cli", "finance-query-mcp"]
resolver = "2"

[package]
name = "finance-query"
version = "2.6.1"
edition = "2024"
authors = ["Harvey Tseng <harveytseng2@gmail.com>"]
description = "A Rust library for querying financial data"
license = "MIT"
repository = "https://github.com/Verdenroz/finance-query"
homepage = "https://github.com/Verdenroz/finance-query"
documentation = "https://docs.rs/finance-query"
readme = "README.md"
keywords = ["finance", "yahoo", "stocks", "quotes", "market-data"]
categories = ["api-bindings", "finance"]
exclude = [
    "server/",
    ".github/",
    "v1/",
    "docs/",
    "fuzz/",
    "*.md",
    "!README.md",
    ".env*",
    "Makefile",
    "docker-compose*.yml",
    "nginx/",
    "mkdocs.yml",
]

[lib]
name = "finance_query"
path = "src/lib.rs"

[dependencies]
# HTTP client (core dependency)
reqwest = { version = "0.13", features = ["json", "cookies", "gzip", "brotli", "blocking", "query"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

# Error handling
thiserror = "2.0.18"
anyhow = "1"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2"
percent-encoding = "2"

# Regex for parsing
regex = "1"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Compile-time string concatenation
const_format = "0.2"

# Logging and tracing
tracing = "0.1"

# HTML parsing for web scraping
scraper = "0.25.0"

# WebSocket streaming support
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-stream = { version = "0.1", features = ["sync"] }
prost = "0.14.3"
base64 = "0.22"

# Optional: DataFrame support
polars = { version = "0.53", optional = true, default-features = false, features = ["lazy"] }
finance-query-derive = { version = "2.6.1", path = "finance-query-derive" }

# Optional: CSV parsing for macro-economic data (Treasury yields)
csv = { version = "1", optional = true }

# Optional: parallel iteration for grid-search optimiser
rayon = { version = "1", optional = true }

# Optional: RSS/Atom feed parsing
feed-rs = { version = "2", optional = true }

# Optional: fully local machine translation (CTranslate2 + NLLB-200)
ct2rs = { version = "0.9.19", optional = true, default-features = false, features = ["dnnl", "tokenizers"] }
hf-hub = { version = "0.5", optional = true, default-features = false, features = ["tokio", "rustls-tls"] }

[features]
default = []
# Every feature except `translation-offline`, which compiles CTranslate2 from
# source and needs cmake + a C++ toolchain.
full = [
    "dataframe",
    "indicators",
    "backtesting",
    "fred",
    "crypto",
    "rss",
    "alphavantage",
    "polygon",
    "fmp",
    "risk",
    "translation",
]
# Enable DataFrame conversions with polars
dataframe = ["dep:polars"]
# Enable technical analysis indicators
indicators = []
# Enable backtesting engine for strategy simulation (requires indicators)
backtesting = ["indicators", "dep:rayon"]
# Enable FRED API and US Treasury yield curve
fred = ["dep:csv"]
# Enable CoinGecko cryptocurrency data
crypto = []
# Enable RSS/Atom news feed aggregation
rss = ["dep:feed-rs"]
# Enable Alpha Vantage financial data API
alphavantage = []
# Enable Polygon.io financial data API
polygon = []
# Enable Financial Modeling Prep (FMP) financial data API
fmp = []
# Enable standalone risk analytics: VaR, Sharpe/Sortino/Calmar ratios, beta, drawdown
risk = ["indicators"]
# Enable translation of human-readable response fields: built-in dictionary
# for finite finance terms + pluggable ML backend (pure Rust, no heavy deps)
translation = []
# Add the fully local CPU machine-translation backend (NLLB-200 via
# CTranslate2). Heavy native build: compiles CTranslate2 from source (needs
# cmake + a C++ toolchain) and downloads ~600 MB of model data on first use.
translation-offline = ["translation", "dep:ct2rs", "dep:hf-hub"]

[package.metadata.docs.rs]
# Everything except `translation-offline`: docs.rs cannot afford the
# CTranslate2 native build. The offline backend adds no public API beyond
# `translation::preload`.
features = [
    "dataframe",
    "indicators",
    "backtesting",
    "fred",
    "crypto",
    "rss",
    "alphavantage",
    "polygon",
    "fmp",
    "risk",
    "translation",
]
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1"
serial_test = "3"
tokio = { version = "1", features = ["full", "test-util"] }
# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "indicators"
harness = false
required-features = ["indicators"]

[[bench]]
name = "backtesting"
harness = false
required-features = ["backtesting"]

[[bench]]
name = "ticker"
harness = false

[[bench]]
name = "tickers"
harness = false

[[bench]]
name = "finance"
harness = false

[[bench]]
name = "stream"
harness = false

# One-shot latency harness (not criterion): downloads the NLLB model on
# first run and reports cold-batch translation times per language.
[[bench]]
name = "translation"
harness = false
required-features = ["translation-offline"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
debug = true
strip = false
lto = false
codegen-units = 16

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
