[workspace]
members = ["server", "finance-query-derive", "finance-query-cli", "finance-query-mcp"]
resolver = "2"

[package]
name = "finance-query"
version = "2.8.0"
edition = "2024"
authors = ["Harvey Tseng <harveytseng2@gmail.com>"]
description = "A Rust library for querying financial data"
license = "MIT"
repository = "https://github.com/Verdenroz/finance-query"
homepage = "https://github.com/Verdenroz/finance-query"
documentation = "https://docs.rs/finance-query"
readme = "README.md"
keywords = ["finance", "yahoo", "stocks", "quotes", "market-data"]
categories = ["api-bindings", "finance"]
exclude = [
    "server/",
    ".github/",
    "v1/",
    "docs/",
    "fuzz/",
    "*.md",
    "!README.md",
    ".env*",
    "Makefile",
    "docker-compose*.yml",
    "mkdocs.yml",
]

[lib]
name = "finance_query"
path = "src/lib.rs"

[dependencies]
# HTTP client (core dependency)
reqwest = { version = "0.13", features = ["json", "cookies", "gzip", "brotli", "blocking", "query"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

# Error handling
thiserror = "2.0.18"
anyhow = "1"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2"
percent-encoding = "2"

# Regex for parsing
regex = "1"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Compile-time string concatenation
const_format = "0.2"

# Logging and tracing
tracing = "0.1"

# WebSocket streaming support
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-stream = { version = "0.1", features = ["sync"] }
prost = "0.14.3"
base64 = "0.22"

# Optional: DataFrame support
polars = { version = "0.53", optional = true, default-features = false, features = ["lazy"] }
finance-query-derive = { version = "2.8.0", path = "finance-query-derive" }

# Optional: CSV parsing for macro-economic data (Treasury yields)
csv = { version = "1", optional = true }

# Optional: parallel iteration for grid-search optimiser
rayon = { version = "1", optional = true }

# Optional: offline VADER lexicon-based news/text sentiment scoring
vader_sentiment = { version = "0.1", optional = true }

# Optional: fully local machine translation (CTranslate2 + opus-mt bilingual)
ct2rs = { version = "0.9.19", optional = true, default-features = false, features = ["dnnl", "tokenizers", "sentencepiece"] }
# Extract Argos `.argosmodel` packages (zip: CT2 model dir + SentencePiece)
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }

[features]
default = []
# Every feature except `translation-offline`, which compiles CTranslate2 from
# source and needs cmake + a C++ toolchain.
full = [
    "dataframe",
    "indicators",
    "backtesting",
    "fred",
    "crypto",
    "alphavantage",
    "polygon",
    "fmp",
    "risk",
    "translation",
    "sentiment",
]
# Enable DataFrame conversions with polars
dataframe = ["dep:polars"]
# Enable technical analysis indicators
indicators = []
# Enable backtesting engine for strategy simulation (requires indicators)
backtesting = ["indicators", "dep:rayon"]
# Enable FRED API and US Treasury yield curve
fred = ["dep:csv"]
# Enable CoinGecko cryptocurrency data
crypto = []
# Enable offline VADER lexicon-based news/transcript sentiment scoring
sentiment = ["dep:vader_sentiment"]
# Enable Alpha Vantage financial data API
alphavantage = []
# Enable Polygon.io financial data API
polygon = []
# Enable Financial Modeling Prep (FMP) financial data API
fmp = []
# Enable standalone risk analytics: VaR, Sharpe/Sortino/Calmar ratios, beta, drawdown
risk = ["indicators"]
# Enable translation of human-readable response fields: built-in dictionary
# for finite finance terms + pluggable ML backend (pure Rust, no heavy deps)
translation = []
# Add the fully local CPU machine-translation backend (opus-mt bilingual
# models via CTranslate2, distributed as Argos packages). Heavy native build:
# compiles CTranslate2 + SentencePiece from source (needs cmake + a C++
# toolchain). Downloads a small (~80-210 MB) per-language model on first use.
translation-offline = ["translation", "dep:ct2rs", "dep:zip"]
# Regression-gate aggregate: every feature whose representative work is pure-Rust
# compute or serde. HTTP-only providers (alphavantage/polygon/fmp) hit the same
# public models already covered; dataframe/translation-offline are too heavy for
# valgrind (excluded by design — see .claude/rules/benches.md).
bench-gate = ["risk", "backtesting", "translation", "fred", "crypto", "sentiment"]

[package.metadata.docs.rs]
# Everything except `translation-offline`: docs.rs cannot afford the
# CTranslate2 native build. The offline backend adds no public API beyond
# `translation::preload`.
features = [
    "dataframe",
    "indicators",
    "backtesting",
    "fred",
    "crypto",
    "alphavantage",
    "polygon",
    "fmp",
    "risk",
    "translation",
    "sentiment",
]
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1"
serial_test = "3"
tokio = { version = "1", features = ["full", "test-util"] }
# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
# Deterministic, instruction-count regression benchmarks (run under valgrind).
# Dev-only — never compiled into the published `finance-query` crate.
iai-callgrind = "0.16.1"

[[bench]]
name = "indicators"
harness = false
required-features = ["indicators"]

[[bench]]
name = "risk"
harness = false
required-features = ["risk"]

[[bench]]
name = "backtesting"
harness = false
required-features = ["backtesting"]

[[bench]]
name = "ticker"
harness = false

[[bench]]
name = "tickers"
harness = false

[[bench]]
name = "finance"
harness = false

[[bench]]
name = "providers"
harness = false

[[bench]]
name = "stream"
harness = false

# Model (de)serialization over real captured server responses
# (benches/fixtures/*.json). Always-available types; no extra features needed.
[[bench]]
name = "serde"
harness = false

# Polars DataFrame conversions (Candle/Chart/Options/Quote). Criterion-only —
# deliberately NOT in the regression gate (Polars is too heavy for the CI gate).
[[bench]]
name = "dataframe"
harness = false
required-features = ["dataframe"]

# RSS/Atom feed parsing over offline XML fixtures.
[[bench]]
name = "feeds"
harness = false

# Offline VADER sentiment scoring latency over real captured news + transcript
# payloads. Criterion-only (wall-clock); the regression gate guards the same
# scoring path via its `sentiment` iai group.
[[bench]]
name = "sentiment"
harness = false
required-features = ["sentiment"]

# One-shot latency harness (not criterion): downloads opus-mt models on first
# run and reports cold-batch translation times + cross-language spread.
[[bench]]
name = "translation"
harness = false
required-features = ["translation-offline"]

# Deterministic instruction-count regression gate (iai-callgrind, runs under
# valgrind). Unlike the criterion benches above, these are stable across
# machines/CI runners and are consumed by `make baseline` as a gate.
# `risk`+`backtesting` cover the compute/strategy paths; `translation` adds
# the (cheap, pure-Rust) dictionary-translation gate; feed-parse is always
# available (feeds has no feature gate). The serde benches use
# always-available model types. dataframe is deliberately excluded (Polars is
# too heavy for the gate — it stays a criterion bench).
# Run with `--features bench-gate` (aggregate of the below).
[[bench]]
name = "regression"
harness = false
required-features = ["risk", "backtesting", "translation", "sentiment"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

# Un-inlined debug deps make the Axum -> GraphQL -> adapter call chain deep
# enough to overflow the default worker stack; this workspace's own crates stay at opt-level 0.
[profile.dev.package."*"]
opt-level = 2

[profile.bench]
inherits = "release"
debug = true
strip = false
lto = false
codegen-units = 16

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
