[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=2.1.3", "Cython>=3.0.11"]
build-backend = "setuptools.build_meta"

[project]
name = "financequery"
version = "1.10.4"
description = "A free and open-source financial data API for pricing, fundamentals, and technical indicators."
license = "MIT"
authors = [
    { name = "Harvey Tseng", email = "harveytseng2@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.112.4,<0.124.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "redis>=5.2.0",
    "hiredis>=3.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
    "cython>=3.0.11",
    "setuptools>=61.0",
    "fastapi-injectable>=1.4.0",
    "algoliasearch==3.0.0",
    "lxml>=4.9.4",
    "mangum>=0.19.0",
    "orjson>=3.10.11",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests-futures>=1.0.1",
    "tqdm>=4.66.6",
    "psutil>=7.0.0,<8.0.0",
    "websockets>=15.0.1,<16.0.0",
    "curl-cffi>=0.10.0,<0.14.0",
    "python-json-logger>=3.3.0,<5.0.0",
    "beautifulsoup4>=4.13.5",
    "frozendict>=2.4.6",
]

[dependency-groups]
dev = [
    "freezegun<2.0.0,>=1.5.1",
    "httpx<1.0.0,>=0.28.1",
    "pytest<9.0.0,>=8.3.4",
    "pytest-asyncio>=0.25.3,<2.0.0",
    "pytest-cov>=6.1.1,<8.0.0",
    "pytest-xdist<4.0.0,>=3.6.0",
    "coverage[toml]<8.0.0,>=7.8.0",
    "ruff<1.0.0,>=0.1.14",
    "pre-commit>=3.6.2,<5.0.0",
    "mkdocs<2.0.0,>=1.6.1",
    "mkdocs-material<10.0.0,>=9.6.14",
    "mkdocstrings[python]<1.0.0,>=0.29.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
addopts = "-n auto --dist worksteal --cov=src --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.coverage.paths]
source = ["src"]
tests = ["test", "*/test"]

[tool.coverage.run]
parallel = true
source = ["src"]
omit = [
    "src/main.py",
    "src/**/dependencies.py",
    "src/**/*middleware.py",
    "src/**/utils.py",
    "docs/*",
    "src/yfinance_client/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
target-version = "py311"
line-length = 160
exclude = ["__init__.py"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort integration
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "N", # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "B008", # function call in default arg
    "N806", # non-lowercase variable in function call
    "UP007" # prefer X | Y for types
]

[tool.ruff.lint.isort]
known-first-party = ["financequery"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
