[package]
name = "finance-query-cli"
version = "0.1.0"
edition = "2024"
authors = ["Harvey Tseng <harveytseng2@gmail.com>"]
description = "Command-line interface for finance-query"
license = "MIT"
repository = "https://github.com/Verdenroz/finance-query"
homepage = "https://github.com/Verdenroz/finance-query"
readme = "README.md"
keywords = ["finance", "yahoo", "stocks", "cli", "market-data"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "fq"
path = "src/main.rs"

[dependencies]
# Core library
finance-query = { version = "2.0", path = "..", features = ["indicators", "backtesting"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"

# Pretty table output
tabled = "0.20"

# Colors and formatting
colored = "3.0"

# Error handling
anyhow = "1"
thiserror = "2.0"

# Date and time formatting
chrono = { version = "0.4", features = ["serde"] }

# Progress indicators
indicatif = "0.18.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Directory utilities
dirs = "6.0"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Desktop notifications
notify-rust = "4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
