[package]
name = "finance-query-derive"
version = "2.7.1"
edition = "2024"
authors = ["Harvey Tseng <harveytseng2@gmail.com>"]
description = "Derive macros for finance-query library"
license = "MIT"
repository = "https://github.com/Verdenroz/finance-query"
homepage = "https://github.com/Verdenroz/finance-query"
documentation = "https://docs.rs/finance-query-derive"
keywords = ["finance", "derive", "macros", "polars"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
pyo3 = { version = "0.27", features = ["abi3-py39"] }

[features]
default = []
# When enabled, the crate exposes the PyModel derive macro.
# Consumers of PyModel must also have `pyo3` in their own dependencies.
python = []
