[package]
name = "finance-query-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server exposing finance-query tools to AI agents"
license = "MIT"
repository = "https://github.com/Verdenroz/finance-query"
publish = false

[[bin]]
name = "fq-mcp"
path = "src/main.rs"

[dependencies]
finance-query = { path = "..", features = ["indicators", "fred", "crypto", "rss", "risk"] }

# MCP SDK (official Rust MCP SDK from modelcontextprotocol/rust-sdk)
rmcp = { version = "1", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-io",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Error handling
anyhow = "1"

# CLI argument parsing (transport flag)
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment config
dotenvy = "0.15"
axum = "0.8"
