[package]
name = "finance-query-server"
version = "2.0.0"
edition = "2021"
authors = ["Harvey Tseng <harveytseng2@gmail.com>"]
description = "High-performance financial data API server built on finance-query library"
license = "MIT"
publish = false  # Server binary not published to crates.io

[[bin]]
name = "finance-query-server"
path = "src/main.rs"

[dependencies]
# Finance library (our own)
finance-query = { path = ".." }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "timeout", "limit", "compression-full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis caching (optional)
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"], optional = true }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Environment and configuration
dotenvy = "0.15"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting
governor = "0.6"

# UUID for request IDs
uuid = { version = "1", features = ["v4", "serde"] }

# URL parsing
url = "2"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1"
serial_test = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = ["redis-cache"]
redis-cache = ["dep:redis"]
