[package]
name = "finance-query-server"
version = "2.1.0"
edition = "2024"
authors = ["Harvey Tseng <harveytseng2@gmail.com>"]
description = "High-performance financial data API server built on finance-query library"
license = "MIT"
publish = false  # Server binary not published to crates.io

# Exclude from cargo-dist releases
[package.metadata.dist]
dist = false

[[bin]]
name = "finance-query-server"
path = "src/main.rs"

[dependencies]
# Finance library (our own)
finance-query = { path = "..", features = ["indicators"] }

# Web framework
axum = { version = "0.8.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors", "timeout", "limit", "compression-full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis caching (optional)
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"], optional = true }

# WebSocket
tokio-tungstenite = "0.28"
futures-util = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2.0.17"

# Environment and configuration
dotenvy = "0.15"

# Date and time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Rate limiting
governor = "0.10.2"

# UUID for request IDs
uuid = { version = "1", features = ["v4", "serde"] }

# URL parsing
url = "2"

# Metrics
prometheus = "0.14"
lazy_static = "1.5"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1"
serial_test = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = ["redis-cache"]
redis-cache = ["dep:redis"]
