[package]
name = "finance-query-server"
version = "2.7.1"
edition = "2024"
authors = ["Harvey Tseng <harveytseng2@gmail.com>"]
description = "High-performance financial data API server built on finance-query library"
license = "MIT"
publish = false  # Server binary not published to crates.io

# Exclude from cargo-dist releases
[package.metadata.dist]
dist = false

[lib]
name = "finance_query_server"
path = "src/lib.rs"

[[bin]]
name = "finance-query-server"
path = "src/main.rs"

[dependencies]
# Finance library (our own)
finance-query = { path = "..", features = ["indicators", "fred", "crypto", "risk", "sentiment"] }

# GraphQL
async-graphql = { version = "7", features = ["graphiql"] }
async-graphql-axum = "7"

# Web framework
axum = { version = "0.8.9", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.11", features = ["fs", "trace", "cors", "timeout", "limit", "compression-full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis caching (optional)
redis = { version = "1.2.2", features = ["tokio-comp", "connection-manager"], optional = true }

# WebSocket
tokio-tungstenite = "0.28"
futures-util = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2.0.18"

# Environment and configuration
dotenvy = "0.15"

# Date and time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Rate limiting
governor = "0.10.4"

# UUID for request IDs
uuid = { version = "1", features = ["v4", "serde"] }

# URL parsing
url = "2"

# Metrics
prometheus = "0.14"
lazy_static = "1.5"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1"
serial_test = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = ["redis-cache", "translation"]
redis-cache = ["dep:redis"]
# Translation plumbing (pure Rust): `lang` query param + Accept-Language
# resolution, dictionary-tier translations. Without `translation-offline`
# (or a custom backend) non-dictionary text passes through untranslated.
translation = ["finance-query/translation"]
# Local opus-mt machine-translation backend (builds CTranslate2 from source;
# requires cmake and a C++ toolchain).
translation-offline = ["translation", "finance-query/translation-offline"]
